test/for/struct_in_body.lox
// error: expected placeholder variable
for () struct Foo {}